--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "fastify": "^4.17.0",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.2.1",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "ts-node": "^10.9.1"
   }
 }
