--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node ./build/index.js",
@@ -16,13 +15,15 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fastify": "^4.17.0",
-    "telegraf": "^4.12.2",
-    "typescript": "^5.0.4"
+    "telegraf": "^4.12.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.2.1",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
